# DevDat

./: .gitlab-ci.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
app/: CMakeLists.txt  devdat_app.cpp
cmake/: DevdatConfig.cmake.in  devdatConfig.cmake.in
examples/: CMakeLists.txt  main.cpp
examples/include/: devdat_t.hpp  random.hpp
examples/src/: devdat_t.cu  random.cu
include/devdat/: devdat.hpp  header.hpp
include/devdat/util/: json_conversions.hpp  thrust_functors.hpp
tests/: CMakeLists.txt  devdat_t.cpp  devdat_t.cu
